ページ構成の改善

--- a/account/index.html
+++ b/account/index.html
@@ -23,8 +23,7 @@
     </button>
     <nav id="nav">
       <a href="/">トップ</a>
-      <a href="/overview">概要</a>
-      <a href="/rules">ルール</a>
+      <a href="/detail">詳細</a>
       <a href="/tools">ツール</a>
       <a href="/contest">コンテスト</a>
       <a class="here" href="/account" id="nav-username">...</a>
