--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
     <nav id="nav">
       <a class="here" href="/">トップ</a>
-      <a href="/overview">概要</a>
-      <a href="/rules">ルール</a>
+      <a href="/detail">詳細</a>
       <a href="/tools">ツール</a>
       <a href="/contest">コンテスト</a>
       <a href="/account" id="nav-username">...</a>
@@ -42,10 +41,10 @@
       <p>
         HiGA Math Contest ( HMC ) は、<br>
         高校生有志主催のHiGA生向けオンライン数学コンテストです。<br>
-        詳しくは概要をご覧ください。
+        詳しくは詳細をご覧ください。
       </p>
       <p>
-        <a href="/overview">概要はこちらから→</a>
+        <a href="/detail">詳細はこちらから→</a>
       </p>
       <p class="lp-contest-date">
         <b>コンテスト日時：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00</b>
