--- a/contest/ranking/index.html
+++ b/contest/ranking/index.html
@@ -24,8 +24,7 @@
 
     <nav id="nav">
       <a href="/">トップ</a>
-      <a href="/overview">概要</a>
-      <a href="/rules">ルール</a>
+      <a href="/detail">詳細</a>
       <a href="/tools">ツール</a>
       <a class="here" href="/contest">コンテスト</a>
       <a href="/account" id="nav-username">...</a>
