詳細の文言の変更

--- a/detail/index.html
+++ b/detail/index.html
@@ -37,12 +37,12 @@
 
     <div class="card">
       <h2>目次</h2>
-        <ul>
+        <ol>
           <li><a href="#overview">概要</a></li>
           <li><a href="#rules">ルール</a></li>
           <li><a href="#terms">参加規約</a></li>
           <li><a href="#privacy-policy">プライバシーポリシー</a></li>
-        </ul>
+        </ol>
     </div>
 
     <div id="overview" class="card">
@@ -84,129 +84,128 @@
       </p>
       <h3>得点方式</h3>
       <p>
-
-        <!--この内容はルールページに書くべきかもしれない-->
         スコアは、正答した問題の難易度に応じて加算されます。<br>
         難易度は、問題の内容を考慮して運営が独自に設定します。<br>
         最終的な順位は、獲得したスコアの 合計によって決定されます。<br>
         同点の場合は、より早く正答した参加者が上位になります。<br>
         しかし、解答の乱れ打ちを防止するため、解答数は <b>10回</b> までと制限されます。<br>
-        また、不正解に対しては、ペナルティとして正答に <b>+5分</b> 時間がかかったとみなされます。
-        <!--ここまで-->
+        また、不正解に対しては、ペナルティとして正答に <b>+10分</b> 時間がかかったとみなされます。
       </p>
     </div>
 
-
-
     <div id="terms" class="card">
-      <h2>ルール</h2>
-            <section id="terms" class="terms">
-        <h2>ルール</h2>
-        <p>HiGA Math Contestのルール・です。<br>
-          参加する場合は、以下の規約をよくお読み下さい。
+      <h2>参加規約</h2>
+      <p>HiGA Math Contestの参加規約です。<br>
+        <b>コンテスト参加には、参加規約への同意が必須です。</b><br>
+        本コンテストに参加する場合は、以下の規約をよくお読み下さい。
+      </p>
+      <h3>第1条. 目的</h3>
+        <p>
+          本規約は、HiGA Math Contest（以下「本コンテスト」）への参加条件および遵守事項を定め、
+          公平かつ円滑な運営を目的とします。<br>
+          参加者は、本規約に同意した上で本コンテストに参加するものとします。
         </p>
-        <h3>第1条. 目的</h3>
-          <p>
-            本規約は、HiGA Math Contest（以下「本コンテスト」）への参加条件および遵守事項を定め、
-            公平かつ円滑な運営を目的とします。<br>
-            参加者は、本規約に同意した上で本コンテストに参加するものとします。
-          </p>
-        <h3>第2条. 使用可能ツール</h3>
-          <p>参加者は、コンテスト中に以下のツールのみ使用できます。</p>
+      <h3>第2条. 使用可能ツール</h3>
+        <p>参加者は、コンテスト中に以下のツールのみ使用できます。</p>
+        <ul>
+          <li><a href="/tools">ツール</a>に記載された電卓・素数表・累乗表</li>
+          <li>事前配布した <b>Practice Pack</b></li>
+        </ul>
+      <h3>第3条. 禁止事項</h3>
+        <p>参加者は、コンテスト中に以下の行為を行ってはなりません。</p>
+        <h3>3.1 外部との通信</h3>
           <ul>
-            <li><a href="/tools">ツール</a>に記載された電卓・素数表・累乗表</li>
-            <li>事前配布した <b>Practice Pack</b></li>
+            <li>他者との相談・協力</li>
+            <li>SNS・チャット等での情報共有</li>
+            <li>解答の共有・閲覧</li>
           </ul>
-        <h3>第3条. 禁止事項</h3>
-          <p>参加者は、コンテスト中に以下の行為を行ってはなりません。</p>
-          <h3>3.1 外部との通信</h3>
-            <ul>
-              <li>他者との相談・協力</li>
-              <li>SNS・チャット等での情報共有</li>
-              <li>解答の共有・閲覧</li>
-            </ul>
-          <h3>3.2 AI・生成系ツール</h3>
-            <p>以下の使用は禁止します。</p>
-            <ul>
-              <li>ChatGPT 等の生成AI</li>
-              <li>数式自動解答サービス</li>
-              <li>問題解決を目的としたAIツール全般</li>
-            </ul>
-            <p>例えば、Google検索時に上部に表示される <b>AIによる概要</b> なども閲覧禁止です。</p>
-          <h3>3.3 不正行為</h3>
-            <ul>
-              <li>複数アカウントでの参加</li>
-              <li>なりすまし</li>
-              <li>問題データの不正取得・共有</li>
-            </ul>
-          <h3>3.4 その他</h3>
-            <p>以下の行為は禁止します。</p>
-            <ul>
-              <li>運営への虚偽報告</li>
-              <li>運営全体への迷惑行為</li>
-              <li>意図的にサイトを破壊する行為</li>
-              <li>その他、運営が不適切と判断する行為</li>
-            </ul>
-        <h3>第4条. 失格・順位取消</h3>
-          <p>以下の場合、運営は参加者を失格または順位取消とすることができます。</p>
+        <h3>3.2 AI・生成系ツール</h3>
+          <p>以下の使用は禁止します。</p>
           <ul>
-            <li>本規約への違反が確認された場合</li>
-            <li>不正行為の疑いが合理的に認められる場合</li>
-            <li>その他、運営が不適切と判断した場合</li>
+            <li>ChatGPT 等の生成AI</li>
+            <li>数式自動解答サービス</li>
+            <li>問題解決を目的としたAIツール全般</li>
           </ul>
-        <h3>第5条. 問題・解説の取り扱い</h3>
-          <ol>
-            <li>問題および解説の著作権は運営に帰属します。</li>
-            <li>無断での再配布・転載・共有を禁止します。</li>
-            <li>学習目的での個人利用は認めます。</li>
-          </ol>
-        <h3>第6条. 免責事項</h3>
-          <ol>
-            <li>通信環境や端末不具合による不利益について、運営は責任を負いません。</li>
-            <li>GitHub Pages 等の外部サービス障害について、運営は責任を負いません。</li>
-            <li>やむを得ない事情により、コンテスト内容を変更・中止する場合があります。</li>
-          </ol>
-        <h3>第7条. 規約の変更</h3>
-          <p>
-            運営は、必要に応じて本規約を変更できるものとします。
-            重要な変更がある場合は、公式サイト上で告知します。
-          </p>
-        <h3>第8条. 同意</h3>
-          <p>
-            参加登録フォームにおいて「規約に同意する」にチェックした時点で、
-            本規約のすべてに同意したものとみなします。
-          </p>
-      </section>
+          <p>例えば、Google検索時に上部に表示される <b>AIによる概要</b> なども閲覧禁止です。</p>
+        <h3>3.3 不正行為</h3>
+          <ul>
+            <li>複数アカウントでの参加</li>
+            <li>なりすまし</li>
+            <li>問題データの不正取得・共有</li>
+          </ul>
+        <h3>3.4 その他</h3>
+          <p>以下の行為は禁止します。</p>
+          <ul>
+            <li>運営への虚偽報告</li>
+            <li>運営全体への迷惑行為</li>
+            <li>意図的にサイトを破壊する行為</li>
+            <li>その他、運営が不適切と判断する行為</li>
+          </ul>
+      <h3>第4条. 失格・順位取消</h3>
+        <p>以下の場合、運営は参加者を失格または順位取消とすることができます。</p>
+        <ul>
+          <li>本規約への違反が確認された場合</li>
+          <li>不正行為の疑いが合理的に認められる場合</li>
+          <li>その他、運営が不適切と判断した場合</li>
+        </ul>
+      <h3>第5条. 問題・解説の取り扱い</h3>
+        <ol>
+          <li>問題および解説の著作権は運営に帰属します。</li>
+          <li>無断での再配布・転載・共有を禁止します。</li>
+          <li>学習目的での個人利用は認めます。</li>
+        </ol>
+      <h3>第6条. 参加環境</h3>
+        <p>
+          参加者は、安定したインターネット環境と適切な端末を用意する責任があります。<br>
+          運営は、通信障害や端末不具合による不利益について責任を負いません。<br>
+        </p>
+        <p>
+          本サイトは、パソコンから、Google Chrome を用いての参加を想定しています。<br>
+          スマートフォンやタブレットからの参加も可能ですが、推奨はしておりません。<br>
+        </p>
+      <h3>第7条. 免責事項</h3>
+        <ol>
+          <li>通信環境や端末不具合による不利益について、運営は責任を負いません。</li>
+          <li>GitHub Pages 等の外部サービス障害について、運営は責任を負いません。</li>
+          <li>やむを得ない事情により、コンテスト内容を変更・中止する場合があります。</li>
+        </ol>
+      <h3>第8条. 規約の変更</h3>
+        <p>
+          運営は、必要に応じて本規約を変更できるものとします。
+          重要な変更がある場合は、公式サイト上で告知します。
+        </p>
+      <h3>第9条. 同意</h3>
+        <p>
+          参加登録フォームにおいて「規約に同意する」にチェックした時点で、
+          本規約のすべてに同意したものとみなします。
+        </p>
     </div>
 
     <div id="privacy-policy" class="card">
       <h2>プライバシーポリシー</h2>
-      <p>
-        HiGA Math Contest（以下「当コンテスト」）は、参加者の個人情報を適切に保護することを重要視しています。
-        以下に、当コンテストのプライバシーポリシーを記載します。
-      </p>
-      <h3>1. 収集する情報</h3>
-      <p>当コンテストは、以下の情報を収集することがあります。</p>
-      <ul>
-        <li>ユーザー名</li>
-        <li>メールアドレス</li>
-        <li>提出した解答とその結果</li>
-        <li>コンテストの参加状況</li>
-      </ul>
-      <h3>2. 情報の利用目的</h3>
-      <p>収集した情報は、以下の目的で利用されます。</p>
+        <p>
+          HiGA Math Contest（以下「当コンテスト」）は、参加者の個人情報を適切に保護することを重要視しています。
+          以下に、当コンテストのプライバシーポリシーを記載します。
+        </p>
+      <h3>第1条. 収集する情報</h3>
+        <p>当コンテストは、以下の情報を収集します。</p>
+          <ul>
+            <li>ユーザー名</li>
+            <li>学年</li>
+            <li>提出した解答とその結果</li>
+          </ul>
+      <h3>第2条. 情報の利用目的</h3>
+       <p>収集した情報は、以下の目的で利用されます。</p>
       <ul>
         <li>コンテストの運営・管理</li>
-        <li>参加者への連絡</li>
-        <li>コンテストの分析・改善</li>
         <li>不正行為の防止</li>
       </ul>
-      <h3>3. 情報の共有</h3>
-      <p>当コンテストは、参加者の情報を第三者と共有することはありません。ただし、法的要請があった場合や、参加者の安全を守るために必要な場合には、情報を開示することがあります。</p>
-      <h3>4. 情報の保護</h3>
-      <p>当コンテストは、参加者の情報を保護するために適切なセキュリティ対策を講じています。ただし、インターネットを介した情報の完全な安全性は保証できないため、参加者は自己責任で情報を提供するものとします。</p>
-      <h3>5. 規約の変更</h3>
-      <p>当コンテストは、必要に応じてプライバシーポリシーを変更することがあります。重要な変更がある場合は、公式サイト上で告知します。</p>
+      <h3>第3条. 情報の共有</h3>
+        <p>当コンテストは、参加者の情報を第三者と共有することは決してありません。</p>
+      <h3>第4条. 情報の保護</h3>
+        <p>当コンテストは、参加者の情報を保護するために適切なセキュリティ対策を講じています。個人を特定することが可能、もしくは個人にとって重要な情報は収集しません。また、参加者は自己責任で情報を提供するものとします。</p>
+      <h3>第5条. 規約の変更</h3>
+        <p>当コンテストは、必要に応じてプライバシーポリシーを変更することがあります。重要な変更がある場合は、公式サイト上で告知します。</p>
     </div>
 
   </main>
