redirect.js の実装

--- a/contest/submissions/index.html
+++ b/contest/submissions/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/styles.css">
   <script src="/script.js" defer></script>
   <script type="module" src="/supabase-client.js"></script>  
+  <script type="module" src="/redirect.js"></script>
   <script type="module" src="/signup.js"></script>
 </head>
 
