--- a/contest/problems/algebra/1/index.html
+++ b/contest/problems/algebra/1/index.html
@@ -6,6 +6,8 @@
   <title>Problem 1 | HiGA Math Contest</title>
   <link rel="stylesheet" href="/styles.css">
   <script src="/calculator.js"></script>
+  <script type="module" src="/supabase-client.js"></script>
+  <script type="module" src="/redirect.js"></script>
 </head>
 
 <body class="problem-bg">
