--- a/contest/problems/index.html
+++ b/contest/problems/index.html
@@ -6,8 +6,9 @@
 
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/styles.css">
+  <script type="module" src="/supabase-client.js"></script>
+  <script type="module" src="/redirect.js"></script> 
   <script src="/script.js" defer></script>
-  <script type="module" src="/supabase-client.js"></script>  
   <script type="module" src="/signup.js"></script>
 </head>
 
