--- a/contest/index.html
+++ b/contest/index.html
@@ -35,6 +35,9 @@
 
   <main>
     <div class="contest-info">
+      <div id="blocked-msg" style="display:none; text-align:center; margin: 2rem auto; max-width: 480px;" class="card">
+      <p>まだ開始されていないため、アクセスできません。</p>
+    </div>
       <h2>予定されたコンテスト</h2>
 
       <table class="contest-table">
@@ -63,6 +66,5 @@
   <footer>
     © HiGA Math Contest
   </footer>
-
 </body>
 </html>
