リンクが合わないバグの修正

--- a/account/index.html
+++ b/account/index.html
@@ -79,7 +79,7 @@
         <input type="text" id="higa_key" placeholder="HiGA KEY" required />
         <label class="agree-row">
           <input type="checkbox" id="agree" required />
-          <a href="/detail#terms">参加規約</a>と<a href="/detail#privacy">プライバシーポリシー</a>に同意します
+          <a href="/detail#terms">参加規約</a>と<a href="/detail#privacy-policy">プライバシーポリシー</a>に同意します
         </label>
         <button type="submit"><span>新規登録</span></button>
       </form>
