質問formの追加

--- a/contest/submissions/index.html
+++ b/contest/submissions/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>提出一覧 | HiGA Math Contest</title>
+  <title>順位表 | HiGA Math Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/styles.css">
-  <script src="/script.js" defer></script>
-  <script type="module" src="/supabase-client.js"></script>  
+  <script type="module" src="/supabase-client.js"></script>
   <script type="module" src="/redirect.js"></script>
+  <script src="/script.js" defer></script>
   <script type="module" src="/signup.js"></script>
 </head>
 
@@ -39,6 +39,7 @@
       <a href="/contest/problems">問題</a>
       <a class="here" href="/contest/submissions">提出</a>
       <a href="/contest/ranking">順位表</a>
+      <a href="/contest/question">質問</a>
     </nav>
     <div class="card">
       <h2>提出</h2>
