--- a/contest/problems/index.html
+++ b/contest/problems/index.html
@@ -39,6 +39,7 @@
     <a class="here" href="/contest/problems">問題</a>
     <a href="/contest/submissions">提出</a>
     <a href="/contest/ranking">順位表</a>
+    <a href="/contest/question">質問</a>
   </nav>
 
   <div class="card">
