--- a/detail/index.html
+++ b/detail/index.html
@@ -37,68 +37,67 @@
 
     <div class="card">
       <h2>目次</h2>
-        <ol>
-          <li><a href="#overview">概要</a></li>
-          <li><a href="#rules">ルール</a></li>
-          <li><a href="#terms">参加規約</a></li>
-          <li><a href="#privacy-policy">プライバシーポリシー</a></li>
-        </ol>
+        <div class="table-of-contents">
+          <h3><a href="#overview">1. 概要</a></h3>
+          <h3><a href="#rules">2. ルール</a></h3>
+          <h3><a href="#terms">3. 参加規約</a></h3>
+          <h3><a href="#privacy-policy">4. プライバシーポリシー</a></h3>
+        </div>  
     </div>
 
     <div id="overview" class="card">
       <h2>概要</h2>
       <h3>コンテストの目的</h3>
-      <p>
-        本コンテストは、HiGA生を対象に競技数学の楽しさを広めることを目的としています。<br>
-        競技数学は、授業で学ぶ数学とは異なり、様々な公式や発想力を柔軟に駆使して問題を解く競技です。<br>
-        本コンテストを通じて、HiGA生が数学の新たな魅力に触れ、数学への興味を深めることを期待しています。
-      </p>
+        <p>
+          本コンテストは、HiGA生を対象に競技数学の楽しさを広めることを目的としています。<br>
+          競技数学では、授業で学ぶ数学とは異なり、様々な公式や発想力を柔軟に駆使して問題を解いていきます。<br>
+          本コンテストを通じて、HiGA生が数学の新たな魅力に触れ、数学への興味を深めることを期待しています。
+        </p>
       <h3>参加対象</h3>
-      <p>
-        本コンテストは、HiGAの全生徒を対象としています。
-        数学に興味がある生徒はもちろん、これから数学を好きになりたい生徒も大歓迎です。
-      </p>
+        <p>
+          本コンテストは、HiGAの全生徒を対象としています。
+          数学に興味がある生徒はもちろん、これから数学を好きになりたい生徒も大歓迎です。
+        </p>
     </div>
 
     <div id="rules" class="card">
       <h2>ルール</h2>
       <h3>出題内容</h3>
-      <p>
-        コンテストでは、競技数学の一般的な下の４つの分野から出題されます。<br>
-        <ul>
-          <li>代数：Algebra</li>
-          <li>組合せ：Combinations</li>
-          <li>幾何：Geometry</li>
-          <li>整数：Number Theory</li>
-        </ul>
-        それぞれの分野において、満遍なく難易度の異なる問題が出題されます。<br>
-        各分野10問、合計40問の問題が出題されます。<br>
-        問題を解くのに必要な公式や定理は、事前に配布されている <b>Practice Pack</b> にまとめられています。
-      </p>
+        <p>
+          コンテストでは、競技数学の一般的な下の４つの分野から出題されます。<br>
+            <ul>
+              <li>代数：Algebra</li>
+              <li>組合せ：Combinatorics</li>
+              <li>幾何：Geometry</li>
+              <li>整数：Number Theory</li>
+            </ul>
+          それぞれの分野において、満遍なく難易度の異なる問題が出題されます。<br>
+          各分野10問、合計40問の問題が出題されます。<br>
+          問題を解くのに必要な公式や定理は、事前に配布されている <b>Practice Pack</b> にまとめられています。
+        </p>
       <h3>コンテストの形式</h3>
-      <p>
-        本コンテストは、オンラインで行われる個人競技です。<br>
-        各問題には、解答を入力する欄が設けられています。<br>
-        問題は、コンテスト開始後、指定された時間内に解く必要があります。<br>
-        コンテスト終了後、解答は自動的に採点され、順位表に反映されます。<br>
-      </p>
+        <p>
+          本コンテストは、本サイトで開催される <b>個人競技</b> です。<br>
+          コンテスト時はいつでも回答を送信でき、リアルタイムで採点されます。<br>
+          コンテスト終了後、参加者の得点が集計され、順位表に結果が表示されます。
+        </p>
       <h3>得点方式</h3>
-      <p>
-        スコアは、正答した問題の難易度に応じて加算されます。<br>
-        難易度は、問題の内容を考慮して運営が独自に設定します。<br>
-        最終的な順位は、獲得したスコアの 合計によって決定されます。<br>
-        同点の場合は、より早く正答した参加者が上位になります。<br>
-        しかし、解答の乱れ打ちを防止するため、解答数は <b>10回</b> までと制限されます。<br>
-        また、不正解に対しては、ペナルティとして正答に <b>+10分</b> 時間がかかったとみなされます。
-      </p>
+        <p>
+          スコアは、正答した問題の難易度に応じて加算されます。<br>
+          難易度は、問題の内容を考慮して運営が独自に設定します。<br>
+          最終的な順位は、獲得したスコアの 合計によって決定されます。<br>
+          同点の場合は、より早く正答した参加者が上位になります。<br>
+          しかし、解答の乱れ打ちを防止するため、解答数は <b>10回</b> までと制限されます。<br>
+          また、不正解に対しては、ペナルティとして正答に <b>+10分</b> 時間がかかったとみなされます。
+        </p>
     </div>
 
     <div id="terms" class="card">
       <h2>参加規約</h2>
-      <p>HiGA Math Contestの参加規約です。<br>
-        <b>コンテスト参加には、参加規約への同意が必須です。</b><br>
-        本コンテストに参加する場合は、以下の規約をよくお読み下さい。
-      </p>
+        <p>HiGA Math Contestの参加規約です。<br>
+          <b>コンテスト参加には、参加規約への同意が必須です。</b><br>
+          本コンテストに参加する場合は、以下の規約をよくお読み下さい。
+        </p>
       <h3>第1条. 目的</h3>
         <p>
           本規約は、HiGA Math Contest（以下「本コンテスト」）への参加条件および遵守事項を定め、
@@ -108,31 +107,30 @@
       <h3>第2条. 使用可能ツール</h3>
         <p>参加者は、コンテスト中に以下のツールのみ使用できます。</p>
         <ul>
-          <li><a href="/tools">ツール</a>に記載された電卓・素数表・累乗表</li>
+          <li><a href="/tools">ツール</a>に記載された素数表・累乗表</li>
+          <li>各問題ページにある電卓</li>
           <li>事前配布した <b>Practice Pack</b></li>
         </ul>
       <h3>第3条. 禁止事項</h3>
         <p>参加者は、コンテスト中に以下の行為を行ってはなりません。</p>
-        <h3>3.1 外部との通信</h3>
-          <ul>
-            <li>他者との相談・協力</li>
-            <li>SNS・チャット等での情報共有</li>
-            <li>解答の共有・閲覧</li>
-          </ul>
-        <h3>3.2 AI・生成系ツール</h3>
-          <p>以下の使用は禁止します。</p>
-          <ul>
-            <li>ChatGPT 等の生成AI</li>
-            <li>数式自動解答サービス</li>
-            <li>問題解決を目的としたAIツール全般</li>
-          </ul>
-          <p>例えば、Google検索時に上部に表示される <b>AIによる概要</b> なども閲覧禁止です。</p>
+          <h3>3.1 外部との通信・検索</h3>
+              <ul>
+                <li>他者との相談・協力</li>
+                <li>SNS・チャット等での情報共有</li>
+                <li>解答の共有・閲覧</li>
+              </ul>
+          <h3>3.2 AI・生成系ツール</h3>
+            <p><b>以下の使用は禁止します。</b></p>
+              <ul>
+                <li>ChatGPT 等の生成AI</li>
+                <li>数式自動解答サービス</li>
+                <li>問題解決を目的としたAIツール全般</li>
+              </ul>
         <h3>3.3 不正行為</h3>
-          <ul>
-            <li>複数アカウントでの参加</li>
-            <li>なりすまし</li>
-            <li>問題データの不正取得・共有</li>
-          </ul>
+              <ul>
+                <li>複数アカウントでの参加</li>
+                <li>なりすまし</li>
+              </ul>
         <h3>3.4 その他</h3>
           <p>以下の行為は禁止します。</p>
           <ul>
@@ -141,23 +139,26 @@
             <li>意図的にサイトを破壊する行為</li>
             <li>その他、運営が不適切と判断する行為</li>
           </ul>
+          <p>
+            本サイトの内部構造の解析や、不正に問題へアクセスしようとする行為は、
+            重大な規約違反として扱います。
+          </p>
       <h3>第4条. 失格・順位取消</h3>
         <p>以下の場合、運営は参加者を失格または順位取消とすることができます。</p>
-        <ul>
-          <li>本規約への違反が確認された場合</li>
-          <li>不正行為の疑いが合理的に認められる場合</li>
-          <li>その他、運営が不適切と判断した場合</li>
-        </ul>
+          <ul>
+            <li>本規約への違反が確認された場合</li>
+            <li>不正行為の疑いが合理的に認められる場合</li>
+            <li>その他、運営が不適切と判断した場合</li>
+          </ul>
       <h3>第5条. 問題・解説の取り扱い</h3>
         <ol>
           <li>問題および解説の著作権は運営に帰属します。</li>
           <li>無断での再配布・転載・共有を禁止します。</li>
-          <li>学習目的での個人利用は認めます。</li>
+          <li>コンテスト終了後の、学習目的での個人利用は認めます。</li>
         </ol>
       <h3>第6条. 参加環境</h3>
         <p>
-          参加者は、安定したインターネット環境と適切な端末を用意する責任があります。<br>
-          運営は、通信障害や端末不具合による不利益について責任を負いません。<br>
+          運営は、通信障害や端末不具合による不利益について責任を負いません。
         </p>
         <p>
           本サイトは、パソコンから、Google Chrome を用いての参加を想定しています。<br>
@@ -166,13 +167,13 @@
       <h3>第7条. 免責事項</h3>
         <ol>
           <li>通信環境や端末不具合による不利益について、運営は責任を負いません。</li>
-          <li>GitHub Pages 等の外部サービス障害について、運営は責任を負いません。</li>
+          <li>本サイトに用いられている外部サービス障害について、運営は責任を負いません。</li>
           <li>やむを得ない事情により、コンテスト内容を変更・中止する場合があります。</li>
         </ol>
       <h3>第8条. 規約の変更</h3>
         <p>
           運営は、必要に応じて本規約を変更できるものとします。
-          重要な変更がある場合は、公式サイト上で告知します。
+          重要な変更がある場合は、本サイト上にて告知いたします。
         </p>
       <h3>第9条. 同意</h3>
         <p>
@@ -184,11 +185,11 @@
     <div id="privacy-policy" class="card">
       <h2>プライバシーポリシー</h2>
         <p>
-          HiGA Math Contest（以下「当コンテスト」）は、参加者の個人情報を適切に保護することを重要視しています。
-          以下に、当コンテストのプライバシーポリシーを記載します。
+          HiGA Math Contest（以下「本コンテスト」）は、参加者の個人情報を適切に保護することを重要視しています。<br>
+          以下に、プライバシーポリシーを記載します。
         </p>
       <h3>第1条. 収集する情報</h3>
-        <p>当コンテストは、以下の情報を収集します。</p>
+        <p>本コンテストは、以下の情報を収集します。</p>
           <ul>
             <li>ユーザー名</li>
             <li>学年</li>
@@ -198,14 +199,13 @@
        <p>収集した情報は、以下の目的で利用されます。</p>
       <ul>
         <li>コンテストの運営・管理</li>
-        <li>不正行為の防止</li>
       </ul>
       <h3>第3条. 情報の共有</h3>
-        <p>当コンテストは、参加者の情報を第三者と共有することは決してありません。</p>
+        <p>本コンテストは、参加者の情報を第三者と共有することは決してありません。</p>
       <h3>第4条. 情報の保護</h3>
-        <p>当コンテストは、参加者の情報を保護するために適切なセキュリティ対策を講じています。個人を特定することが可能、もしくは個人にとって重要な情報は収集しません。また、参加者は自己責任で情報を提供するものとします。</p>
+        <p>本コンテストは、参加者の情報を保護するために適切なセキュリティ対策を講じています。<br><b>個人を特定することが可能、もしくは個人にとって重要な情報は収集致しません。</b><br>また、参加者は自己責任で情報を提供するものとします。</p>
       <h3>第5条. 規約の変更</h3>
-        <p>当コンテストは、必要に応じてプライバシーポリシーを変更することがあります。重要な変更がある場合は、公式サイト上で告知します。</p>
+        <p>本コンテストは、必要に応じてプライバシーポリシーを変更することがあります。重要な変更がある場合は、本サイト上にて告知いたします。</p>
     </div>
 
   </main>
