--- a/detail/index.html
+++ b/detail/index.html
@@ -37,12 +37,12 @@
 
     <div class="card">
       <h2>目次</h2>
-        <div class="table-of-contents">
-          <h3><a href="#overview">1. 概要</a></h3>
-          <h3><a href="#rules">2. ルール</a></h3>
-          <h3><a href="#terms">3. 参加規約</a></h3>
-          <h3><a href="#privacy-policy">4. プライバシーポリシー</a></h3>
-        </div>  
+        <ul class="table-of-contents">
+          <li><a href="#overview">1. 概要</a></li>
+          <li><a href="#rules">2. ルール</a></li>
+          <li><a href="#terms">3. 参加規約</a></li>
+          <li><a href="#privacy-policy">4. プライバシーポリシー</a></li>
+        </ul>  
     </div>
 
     <div id="overview" class="card">
@@ -63,14 +63,14 @@
     <div id="rules" class="card">
       <h2>ルール</h2>
       <h3>出題内容</h3>
+        <p>コンテストでは、競技数学の一般的な下の４つの分野から出題されます。</p>
+        <ul>
+          <li>代数：Algebra</li>
+          <li>組合せ：Combinatorics</li>
+          <li>幾何：Geometry</li>
+          <li>整数：Number Theory</li>
+        </ul>
         <p>
-          コンテストでは、競技数学の一般的な下の４つの分野から出題されます。<br>
-            <ul>
-              <li>代数：Algebra</li>
-              <li>組合せ：Combinatorics</li>
-              <li>幾何：Geometry</li>
-              <li>整数：Number Theory</li>
-            </ul>
           それぞれの分野において、満遍なく難易度の異なる問題が出題されます。<br>
           各分野10問、合計40問の問題が出題されます。<br>
           問題を解くのに必要な公式や定理は、事前に配布されている <b>Practice Pack</b> にまとめられています。
