--- a/detail/index.html
+++ b/detail/index.html
@@ -37,16 +37,16 @@
 
     <div class="card">
       <h2>目次</h2>
-        <ul class="table-of-contents">
-          <li><a href="#overview">1. 概要</a></li>
-          <li><a href="#rules">2. ルール</a></li>
-          <li><a href="#terms">3. 参加規約</a></li>
-          <li><a href="#privacy-policy">4. プライバシーポリシー</a></li>
-        </ul>  
+        <ol class="table-of-contents">
+          <li><a href="#overview">概要</a></li>
+          <li><a href="#rules">ルール</a></li>
+          <li><a href="#terms">参加規約</a></li>
+          <li><a href="#privacy-policy">プライバシーポリシー</a></li>
+        </ol>  
     </div>
 
     <div id="overview" class="card">
-      <h2>概要</h2>
+      <h2>1. 概要</h2>
       <h3>コンテストの目的</h3>
         <p>
           本コンテストは、HiGA生を対象に競技数学の楽しさを広めることを目的としています。<br>
@@ -61,7 +61,7 @@
     </div>
 
     <div id="rules" class="card">
-      <h2>ルール</h2>
+      <h2>2. ルール</h2>
       <h3>出題内容</h3>
         <p>コンテストでは、競技数学の一般的な下の４つの分野から出題されます。</p>
         <ul>
@@ -93,7 +93,7 @@
     </div>
 
     <div id="terms" class="card">
-      <h2>参加規約</h2>
+      <h2>3. 参加規約</h2>
         <p>HiGA Math Contestの参加規約です。<br>
           <b>コンテスト参加には、参加規約への同意が必須です。</b><br>
           本コンテストに参加する場合は、以下の規約をよくお読み下さい。
@@ -132,7 +132,6 @@
                 <li>なりすまし</li>
               </ul>
         <h3>3.4 その他</h3>
-          <p>以下の行為は禁止します。</p>
           <ul>
             <li>運営への虚偽報告</li>
             <li>運営全体への迷惑行為</li>
@@ -140,8 +139,8 @@
             <li>その他、運営が不適切と判断する行為</li>
           </ul>
           <p>
-            本サイトの内部構造の解析や、不正に問題へアクセスしようとする行為は、
-            重大な規約違反として扱います。
+            <b>本サイトの内部構造の解析や、不正に問題へアクセスしようとする行為は、
+            重大な規約違反として扱います。</b>
           </p>
       <h3>第4条. 失格・順位取消</h3>
         <p>以下の場合、運営は参加者を失格または順位取消とすることができます。</p>
@@ -172,7 +171,7 @@
         </ol>
       <h3>第8条. 規約の変更</h3>
         <p>
-          運営は、必要に応じて本規約を変更できるものとします。
+          運営は、必要に応じて本規約を変更できるものとします。<br>
           重要な変更がある場合は、本サイト上にて告知いたします。
         </p>
       <h3>第9条. 同意</h3>
@@ -183,7 +182,7 @@
     </div>
 
     <div id="privacy-policy" class="card">
-      <h2>プライバシーポリシー</h2>
+      <h2>4. プライバシーポリシー</h2>
         <p>
           HiGA Math Contest（以下「本コンテスト」）は、参加者の個人情報を適切に保護することを重要視しています。<br>
           以下に、プライバシーポリシーを記載します。
