--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 共通CSSを読み込む -->
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
-  <script type="module" src="/supabase-client.js"></script>
-  <script type="module" src="/signup.js"></script>
+  <link rel="stylesheet" href="_css/styles.css">
+  <script src="_js/script.js" defer></script>
+  <script type="module" src="_js/supabase-client.js"></script>
+  <script type="module" src="_js/signup.js"></script>
 </head>
 
 <body class="landing">
