相対パスの修正

--- a/account/index.html
+++ b/account/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>アカウント | HiGA Math Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../_css/styles.css">
-  <link rel="stylesheet" href="../_css/account.css">
-  <script src="../_js/script.js" defer></script>
-  <script type="module" src="../_js/supabase-client.js"></script>
-  <script type="module" src="../_js/account.js"></script>
-  <script type="module" src="../_js/signup.js"></script>
+  <link rel="stylesheet" href="/_css/styles.css">
+  <link rel="stylesheet" href="/_css/account.css">
+  <script src="/_js/script.js" defer></script>
+  <script type="module" src="/_js/supabase-client.js"></script>
+  <script type="module" src="/_js/account.js"></script>
+  <script type="module" src="/_js/signup.js"></script>
 </head>
 
 <body class="register-bg">
