--- a/contest/index.html
+++ b/contest/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>コンテスト | HiGA Math Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../_css/styles.css">
-  <link rel="stylesheet" href="../_css/countdown.css">
-  <script src="../_js/script.js" defer></script>
-  <script type="module" src="../_js/supabase-client.js"></script>
-  <script type="module" src="../_js/signup.js"></script>
-  <script type="module" src="../_js/contest.js"></script>
-  <script type="module" src="../_js/countdown.js"></script>
+  <link rel="stylesheet" href="/_css/styles.css">
+  <link rel="stylesheet" href="/_css/countdown.css">
+  <script src="/_js/script.js" defer></script>
+  <script type="module" src="/_js/supabase-client.js"></script>
+  <script type="module" src="/_js/signup.js"></script>
+  <script type="module" src="/_js/contest.js"></script>
+  <script type="module" src="/_js/countdown.js"></script>
 </head>
 
 <body class="contest-bg">
