--- a/contest/question/index.html
+++ b/contest/question/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 共通CSSを読み込む -->
-  <link rel="stylesheet" href="../../_css/styles.css">
-  <link rel="stylesheet" href="../../_css/question.css">
-  <script type="module" src="../../_js/supabase-client.js"></script>
-  <script type="module" src="../../_js/redirect.js"></script> 
-  <script src="../../_js/script.js" defer></script>
-  <script type="module" src="../../_js/signup.js"></script>
-  <script type="module" src="../../_js/contest/question/questionbox.js"></script>
+  <link rel="stylesheet" href="/_css/styles.css">
+  <link rel="stylesheet" href="/_css/question.css">
+  <script type="module" src="/_js/supabase-client.js"></script>
+  <script type="module" src="/_js/redirect.js"></script> 
+  <script src="/_js/script.js" defer></script>
+  <script type="module" src="/_js/signup.js"></script>
+  <script type="module" src="/_js/contest/question/questionbox.js"></script>
 </head>
 
 <body class="question-bg">
