JS ファイルの分離 & それに伴う相対パスの修正

--- a/contest/problems/algebra/1/index.html
+++ b/contest/problems/algebra/1/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/_css/styles.css">
   <script type="module" src="/_js/supabase-client.js"></script>
   <script type="module" src="/_js/redirect.js"></script>
-  <script src="/_js/script.js" defer></script>
+  <script src="/_js/hamburger-menu.js" defer></script>
   <script type="module" src="/_js/signup.js"></script>
   <script type="module" src="/_js/calculator.js"></script>
 </head>
