--- a/account/index.html
+++ b/account/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/_css/styles.css">
   <link rel="stylesheet" href="/_css/account.css">
-  <script src="/_js/script.js" defer></script>
+  <script src="/_js/hamburger-menu.js" defer></script>
   <script type="module" src="/_js/supabase-client.js"></script>
   <script type="module" src="/_js/account.js"></script>
   <script type="module" src="/_js/signup.js"></script>
