--- a/contest/question/index.html
+++ b/contest/question/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="/_css/question.css">
   <script type="module" src="/_js/supabase-client.js"></script>
   <script type="module" src="/_js/redirect.js"></script> 
-  <script src="/_js/script.js" defer></script>
+  <script src="/_js/hamburger-menu.js" defer></script>
   <script type="module" src="/_js/signup.js"></script>
-  <script type="module" src="/_js/contest/question/questionbox.js"></script>
+  <script type="module" src="/_js/question-box.js"></script>
 </head>
 
 <body class="question-bg">
