--- a/detail/index.html
+++ b/detail/index.html
@@ -7,7 +7,7 @@
 
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/_css/styles.css">
-  <script src="/_js/script.js" defer></script>
+  <script src="/_js/hamburger-menu.js" defer></script>
   <script type="module" src="/_js/supabase-client.js"></script>  
   <script type="module" src="/_js/signup.js"></script>
 </head>
