--- a/contest/index.html
+++ b/contest/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>コンテスト | HiGA Math Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/_css/styles.css">
-  <link rel="stylesheet" href="/_css/countdown.css">
+  <link rel="stylesheet" href="/_css/common.css">
+  <link rel="stylesheet" href="/_css/contest.css">
   <script src="/_js/hamburger-menu.js" defer></script>
   <script type="module" src="/_js/supabase-client.js"></script>
   <script type="module" src="/_js/signup.js"></script>
