account削除モーダルの修正 & カウントダウンのデザイン修正

--- a/contest/index.html
+++ b/contest/index.html
@@ -36,7 +36,7 @@
 
   <main>
     <div class="contest-info">
-      <div id="blocked-msg" style="display:none; text-align:center; margin: 2rem auto; max-width: 480px;" class="card">
+      <div id="blocked-msg" class="card">
       <p>まだ開始されていないため、アクセスできません。</p>
     </div>
 
