--- a/contest/problems/algebra/1/index.html
+++ b/contest/problems/algebra/1/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Problem 1 | HiGA Math Contest</title>
-  <link rel="stylesheet" href="/_css/common.css">
-  <link rel="stylesheet" href="/_css/problem-top.css">
-  <script type="module" src="/_js/supabase-client.js"></script>
-  <script type="module" src="/_js/redirect.js"></script>
-  <script src="/_js/hamburger-menu.js" defer></script>
-  <script type="module" src="/_js/signup.js"></script>
-  <script type="module" src="/_js/calculator.js"></script>
+  <link rel="stylesheet" href="/css/common.css">
+  <link rel="stylesheet" href="/css/problem-top.css">
+  <script type="module" src="/js/supabase-client.js"></script>
+  <script type="module" src="/js/redirect.js"></script>
+  <script src="/js/hamburger-menu.js" defer></script>
+  <script type="module" src="/js/signup.js"></script>
+  <script type="module" src="/js/calculator.js"></script>
 </head>
 
 <body class="problem-bg">
