--- a/contest/submissions/index.html
+++ b/contest/submissions/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 共通CSSを読み込む -->
-  <link rel="stylesheet" href="/_css/common.css">
-  <link rel="stylesheet" href="/_css/submissions.css">
-  <script type="module" src="/_js/supabase-client.js"></script>
-  <script type="module" src="/_js/redirect.js"></script>
-  <script src="/_js/hamburger-menu.js" defer></script>
-  <script type="module" src="/_js/signup.js"></script>
+  <link rel="stylesheet" href="/css/common.css">
+  <link rel="stylesheet" href="/css/submissions.css">
+  <script type="module" src="/js/supabase-client.js"></script>
+  <script type="module" src="/js/redirect.js"></script>
+  <script src="/js/hamburger-menu.js" defer></script>
+  <script type="module" src="/js/signup.js"></script>
 </head>
 
 <body class="submission-bg">
