--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>トップ | HiGA Math Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/_css/common.css">
-  <link rel="stylesheet" href="/_css/landing.css">
-  <script src="/_js/hamburger-menu.js" defer></script>
-  <script type="module" src="/_js/supabase-client.js"></script>
-  <script type="module" src="/_js/signup.js"></script>
+  <link rel="stylesheet" href="/css/common.css">
+  <link rel="stylesheet" href="/css/landing.css">
+  <script src="/js/hamburger-menu.js" defer></script>
+  <script type="module" src="/js/supabase-client.js"></script>
+  <script type="module" src="/js/signup.js"></script>
 </head>
 
 <body class="landing">
