--- a/tools/index.html
+++ b/tools/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 共通CSSを読み込む -->
-  <link rel="stylesheet" href="/_css/common.css">
-  <link rel="stylesheet" href="/_css/tools.css">
-  <script src="/_js/tools.js" defer></script>
-  <script type="module" src="/_js/supabase-client.js"></script>
-  <script type="module" src="/_js/signup.js"></script>
+  <link rel="stylesheet" href="/css/common.css">
+  <link rel="stylesheet" href="/css/tools.css">
+  <script src="/js/tools.js" defer></script>
+  <script type="module" src="/js/supabase-client.js"></script>
+  <script type="module" src="/js/signup.js"></script>
 </head>
 
 <body class="tool-bg">
