--- a/contest/problems/algebra/1/index.html
+++ b/contest/problems/algebra/1/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Problem 1 | HiGA Math Contest</title>
   <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/problem-top.css">
+  <link rel="stylesheet" href="/css/problems-detail.css">
   <script type="module" src="/js/supabase-client.js"></script>
   <script type="module" src="/js/redirect.js"></script>
   <script src="/js/hamburger-menu.js" defer></script>
   <script type="module" src="/js/signup.js"></script>
   <script type="module" src="/js/calculator.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
 <body class="problem-bg">
