--- a/contest/problems/algebra/1/index.html
+++ b/contest/problems/algebra/1/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html lang="ja">
+<!--
+  data-problem-id に problems.id（UUID）を埋め込む。
+  サーバーサイドレンダリング or ビルド時に各問題ページごとに差し替える。
+  例: data-problem-id="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+-->
+<html lang="ja" data-problem-id="982b354d-e33c-4090-b675-3153012d853a">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +16,7 @@
   <script src="/js/hamburger-menu.js" defer></script>
   <script type="module" src="/js/signup.js"></script>
   <script type="module" src="/js/calculator.js"></script>
+  <script type="module" src="/js/problems-detail.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
@@ -24,7 +30,7 @@
   </header>
 
   <main class="problem-wrap">
-    
+
     <!-- Calculator -->
     <my-calculator></my-calculator>
 
@@ -41,12 +47,25 @@
       <h2>解答</h2>
       <form id="answer-form">
         <div class="answer-row">
-        <input type="text" name="answer" placeholder="ここに回答を入力" required>
-        <button type="submit" ><a href="/contest/submissions/">提出</a></button>
+          <input
+            type="text"
+            name="answer"
+            placeholder="ここに回答を入力"
+            autocomplete="off"
+            required
+          >
+          <button type="submit">提出</button>
+          <!-- ↑ <a> タグを外す。submit はフォームイベントで処理する -->
         </div>
       </form>
-      <p>あとn回提出できます。</p>
-      <p>問題の指示に従って解答を非負整数で入力してください．<br>正しくないジャッジ結果となるのを防ぐため，解答に空白文字を含まないようにしてください．</p>
+
+      <!-- JS が残り回数を書き込む / 上限・正解済みの場合はメッセージを書き込む -->
+      <p id="remaining-count" class="remaining-msg">読み込み中...</p>
+
+      <p class="submit-note">
+        問題の指示に従って解答を非負整数で入力してください。<br>
+        正しくないジャッジ結果となるのを防ぐため、解答に空白文字を含まないようにしてください。
+      </p>
     </section>
   </main>
 
