アイコン追加w

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="/js/hamburger-menu.js" defer></script>
   <script type="module" src="/js/supabase-client.js"></script>
   <script type="module" src="/js/signup.js"></script>
+  <link rel="icon" href="/favicon.ico">
 </head>
 
 <body class="landing">
