--- a/contest/problems/index.html
+++ b/contest/problems/index.html
@@ -58,7 +58,7 @@
         <section class="contest-col">
           <h3>代数　Algebra</h3>
           <ul class="contest-links">
-            <li><a href="/contest/problems/algebra/1/">Q1 確認ページ<span class="score">100 pts</span></a></li>
+            <li><a href="/contest/problems/algebra/1/">Q1<span class="score">100 pts</span></a></li>
             <li><a href="/contest/problems/algebra/2/">Q2<span class="score">100 pts</span></a></li>
             <li><a href="/contest/problems/algebra/3/">Q3<span class="score">100 pts</span></a></li>
             <li><a href="/contest/problems/algebra/4/">Q4<span class="score">100 pts</span></a></li>
