transferボタンの実装 & スコア等のfetch

--- a/contest/problems/algebra/1/index.html
+++ b/contest/problems/algebra/1/index.html
@@ -8,7 +8,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Problem 1 | HiGA Math Contest</title>
+  <title>Problem | HiGA Math Contest</title>
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/problems-detail.css">
   <script type="module" src="/js/supabase-client.js"></script>
@@ -24,8 +24,8 @@
   <header class="problem-header">
     <a class="back-btn" href="/contest/problems/">← 戻る</a>
     <div class="problem-meta">
-      <div class="problem-title">代数 Algebra - Problem 1</div>
-      <div class="problem-sub">Points: <span class="pts">100</span></div>
+      <div class="problem-title">読み込み中...</div>
+      <div class="problem-sub">Points: <span class="pts">--</span></div>
     </div>
   </header>
 
@@ -40,6 +40,7 @@
       <p>
         問題をここに表示。Texで直書きをしようえへへ
       </p>
+      <p>アインシュタインは \( E=mc^2 \) の公式を導きました。</p>
     </section>
 
     <!-- Form -->
