--- a/contest/questions/index.html
+++ b/contest/questions/index.html
@@ -39,7 +39,7 @@
     <a href="/contest/problems">問題</a>
     <a href="/contest/submissions">提出</a>
     <a href="/contest/ranking">順位表</a>
-    <a class="here" href="/contest/question">質問</a>
+    <a class="here" href="/contest/questions">質問</a>
   </nav>
 
   <!-- 質問投稿 -->
